--- a/Nav Bar With Hover Effect/css/styles.css
+++ b/Nav Bar With Hover Effect/css/styles.css
@@ -11,3 +11,13 @@ body{
     min-height: 100vh;
     background: #000;
 }
+nav{
+    position: relative;
+    width: 524px;
+    height: 50px;
+    background: #222;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
