--- a/Nav Bar With Hover Effect/css/styles.css
+++ b/Nav Bar With Hover Effect/css/styles.css
@@ -21,3 +21,19 @@ nav{
     justify-content: center;
     align-items: center;
 }
+nav a{
+    position: relative;
+    display: inline-block;
+    font-size: 1em;
+    font-weight: 500;
+    color: #fff;
+    text-decoration: none;
+    padding: 0 23px;
+}
+nav span{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 95px;
+    height: 100%;
+}
