--- a/Nav Bar With Hover Effect/css/styles.css
+++ b/Nav Bar With Hover Effect/css/styles.css
@@ -37,4 +37,12 @@ nav span{
     width: 95px;
     height: 100%;
     background: linear-gradient(45deg, #4f1919, #ff3333);
+    border-radius: 8px;
+    transition: 0.5s;
+}
+nav a:nth-child(1):hover ~ span{
+    left: 0;
+}
+nav a:nth-child(2):hover ~ span{
+    left: 95px;
 }
