--- a/Nav Bar With Hover Effect/css/styles.css
+++ b/Nav Bar With Hover Effect/css/styles.css
@@ -40,9 +40,19 @@ nav span{
     border-radius: 8px;
     transition: 0.5s;
 }
-nav a:nth-child(1):hover ~ span{
+nav a:nth-child(1):hover~span{
     left: 0;
 }
-nav a:nth-child(2):hover ~ span{
+nav a:nth-child(2):hover~span{
+    left: 95px;
+}
+nav a:nth-child(3):hover~span{
+    left: 189px;
+    width: 110px;
+}
+nav a:nth-child(4):hover~span{
+    left: 95px;
+}
+nav a:nth-child(5):hover~span{
     left: 95px;
 }
