--- a/Nav Bar With Hover Effect/css/styles.css
+++ b/Nav Bar With Hover Effect/css/styles.css
@@ -51,8 +51,10 @@ nav a:nth-child(3):hover~span{
     width: 110px;
 }
 nav a:nth-child(4):hover~span{
-    left: 95px;
+    left: 289px;
+    width: 115px;
 }
 nav a:nth-child(5):hover~span{
-    left: 95px;
+    left: 413px;
+    width: 110px;
 }
