--- a/Menu Bar With Hover Effect 2/css/styles.css
+++ b/Menu Bar With Hover Effect 2/css/styles.css
@@ -11,35 +11,18 @@ body{
     min-height: 100vh;
     background: #000;
 }
-nav{
-    position: relative;
-    width: 524px;
-    height: 50px;
-    background: #222;
-    border-radius: 8px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 nav a{
     position: relative;
-    display: inline-block;
-    font-size: 1em;
+    /* display: inline-block; */
+    font-size: 1.1em;
     font-weight: 500;
-    color: #fff;
+    color: #333;
     text-decoration: none;
-    padding: 0 23px;
-    z-index: 1;
+    padding: 6px 20px;
+    transition: .5s;
 }
-nav span{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 95px;
-    height: 100%;
-    background: linear-gradient(45deg, #4f1919, #ff3333);
-    border-radius: 8px;
-    transition: 0.5s;
+nav a:hover{
+    color: #0ef;
 }
 nav a:nth-child(1):hover~span{
     left: 0;
