--- a/Menu Bar With Hover Effect 2/css/styles.css
+++ b/Menu Bar With Hover Effect 2/css/styles.css
@@ -24,21 +24,12 @@ nav a{
 nav a:hover{
     color: #0ef;
 }
-nav a:nth-child(1):hover~span{
+nav a span{
+    position: absolute;
+    top: 0;
     left: 0;
-}
-nav a:nth-child(2):hover~span{
-    left: 95px;
-}
-nav a:nth-child(3):hover~span{
-    left: 189px;
-    width: 110px;
-}
-nav a:nth-child(4):hover~span{
-    left: 289px;
-    width: 115px;
-}
-nav a:nth-child(5):hover~span{
-    left: 413px;
-    width: 110px;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    border-bottom: 2px solid #0ef;
 }
