--- a/Dropdown Menu/css/styles.css
+++ b/Dropdown Menu/css/styles.css
@@ -3,3 +3,11 @@
     padding: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+.container {
+    display: flex;
+    font-size: 14px;
+    height: 100vh;
+    background: #d8d8d8;
+}
+
