--- a/Dropdown Menu/css/styles.css
+++ b/Dropdown Menu/css/styles.css
@@ -31,3 +31,21 @@
     font-weight: 600;
     cursor: pointer;
 }
+
+a {
+    text-decoration: none;
+    color: currentColor;
+}
+
+.drop-down {
+    position: absolute;
+    padding: 0.5rem 0;
+    margin: 0.5rem -0.5rem;
+    background: antiquewhite;
+    color: black;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 0.5rem;
+    font-size: 12px;
+    display: none;
+}
+
